--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">HTML, CSS and JavaScript, ReactJS, NodeJS, SQL, Problem solving, Continuous Learning, and Team Collaboration</p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
