--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
               <p class="skills__text">HTML, CSS and JavaScript, ReactJS, NodeJS, SQL, Problem solving, Continuous Learning, and Team Collaboration</p>
             </div>
           </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="main-info fh">
+                <div class="experiences"></div>
+          
+                <div class="additional-info fv"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
