--- a/index.html
+++ b/index.html
@@ -88,7 +88,60 @@
           <div class="container">
             <div class="resume__block">
               <div class="main-info fh">
-                <div class="experiences"></div>
+                <div class="experiences">
+                  <h3 class="experiences__header">Experience</h3>
+                  <div class="experiences__company">
+                    <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">2022-2024</span>
+                      <h3 class="experiences__company-header-name">Cavite State University - Silang Campus</h3>
+                    </div>
+
+                    <div class="experiences__company-project">
+                      <span class="experiences__company-project-role">Instructor</span>
+                      <h3 class="experiences__company-project-name">Department of Information Technology</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Lecturing</li>
+                        <li>Curriculum Development</li>
+                        <li>Taught Students Fundamentals of Programming</li>
+                        <li>Taught Students Database</li>
+                        <li>Taught Back-end Development</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="experiences__company">
+                    <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">2021-2022</span>
+                      <h3 class="experiences__company-header-name">Integr8 Software Solutions Inc.</h3>
+                    </div>
+
+                    <div class="experiences__company-project">
+                      <span class="experiences__company-project-role">IT Associate</span>
+                      <h3 class="experiences__company-project-name">Company's Software Products</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Back-end Development</li>
+                        <li>Front-end Development</li>
+                        <li>Code Maintenance</li>
+                        <li>Trained End-users</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="experiences__company">
+                    <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">2021-2021</span>
+                      <h3 class="experiences__company-header-name">TERP Global</h3>
+                    </div>
+
+                    <div class="experiences__company-project">
+                      <span class="experiences__company-project-role">Back-end Developer</span>
+                      <h3 class="experiences__company-project-name">TERP's LMS</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Back-end Development</li>
+                        <li>API Integration</li>
+                        <li>Code Maintenance</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
           
                 <div class="additional-info fv"></div>
               </div>
