--- a/index.html
+++ b/index.html
@@ -143,7 +143,22 @@
                   </div>
                 </div>
           
-                <div class="additional-info fv"></div>
+                <div class="additional-info fv">
+                  <div class="additional-info__education">
+                    <h3 class="additional-info__education-header">Education</h3>
+                    <div class="additional-info__education-university">
+                      <span class="additional-info__education-university-durability"> 2019 </span>
+                      <h3 class="additional-info__education-university-speciality">Bachelor of Science in Computer Science</h3>
+                      <p class="additional-info__education-university-name">Cavite State University - Silang Campus</p>
+                    </div>
+                  </div>
+                
+                  <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">English</p>
+                    <p class="additional-info__languages-item">Filipino/Tagalog</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
